--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000
 JWT_SECRET=MyUltraSecurePassWordIWontForgetToChange
 JWT_EXPIRATION_IN_MINUTES=4320
-MONGO_URI=mongodb://localhost:27017/myprojectdbname
+MONGO_URI=mongodb+srv://rostomy:ROStomyhsy123@cluster0.iao9hfa.mongodb.net/
 EMAIL_FROM_NAME=My Project
 EMAIL_FROM_ADDRESS=info@myproject.com
 EMAIL_SMTP_DOMAIN_MAILGUN=myproject.com
