--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -29,4 +29,4 @@ jobs:
         cache: 'npm'
     - run: npm run build --if-present
     - run: npm install
-    - run: npm run start
+    - run: npm run start & npx wait-on http://localhost:3000
